# practicallypain

./: Cargo.toml  README.md  bugtrack.db  schema.sql
src/: Cargo.toml  bug.rs  main.rs  middleware.rs  project.rs  schema.sql  user.rs
src/handlers/: assign.rs  auth.rs
src/middleware/: admin_guard.rs  auth_middleware.rs
src/models/: bug.rs  project.rs  user.rs
templates/: assign_bug.html  assign_confirm.html  assign_error.html  login.html
