[package]
name = "practicallypain"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
bcrypt = "0.15"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
dotenv = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
tera = "1.19"
anyhow = "1.0"
sha2 = "0.10"
futures-util = "0.3.31"
actix-files = "0.6.6"
